# picox

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  format.sh  pbt
app0/: CMakeLists.txt  main.c
app1/: CMakeLists.txt  main.c
app2/: Makefile
app3/: CMakeLists.txt  blinker.pio  main.c
app4/: CMakeLists.txt  main.c  pwm.c  pwm.h  pwm.pio
common/: log.c  log.h  util.c  util.h
ext/: Makefile
old/: CMakeLists.txt  Makefile  format.sh
old/src/: CMakeLists.txt  audio.c  audio.h  main.c  qfmt.h
old/src/i2s/: CMakeLists.txt  i2s.c  i2s.pio
old/tools/: exp.py
src/: CMakeLists.txt  audio.c  audio.h  const.h  ggm.h  ggm_math.c  i2s.c  i2s.h  log.c  log.h  lut.c  lut.h  main.c  math.c  midi.c  qfmt.h
src/i2s/: i2s.h
tools/: cos.py  lut.py  midi.py
